<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.toure.demahom.whattowatch.view.MyTabbedActivity">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_favorites"
        android:title="@string/itmFavoritesMoviesTitle"
        android:icon="@drawable/ic_favorite_border_black_24dp"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_disconnect"
        android:title="@string/itmDisconnect"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
