<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_register" tools:context="com.toure.demahom.whattowatch.Register">

    <TextView
        android:text="@string/userNameTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/userNameETMarginBTM"/>

    <EditText
        android:id="@+id/userNameID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/userNameETMarginBTM" />

    <TextView
        android:text="@string/passwordTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/userNameETMarginBTM"/>

    <EditText
        android:id="@+id/passwordID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginBottom="@dimen/passwordETMarginBTM" />

    <TextView
        android:text="@string/confirmPasswordTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/userNameETMarginBTM"/>

    <EditText
        android:id="@+id/confirmPasswordID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginBottom="@dimen/registerETMarginBtm" />

    <Button
        android:id="@+id/okRegisterBtnID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/confirmRegistrationBtn"
        android:layout_marginBottom="@dimen/loginBtnMarginBTM"/>

    <TextView
        android:id="@+id/cancelRegisterID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/cancelTV"
        android:textStyle="bold"
        android:linksClickable="true" />

</LinearLayout>
