<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_login"
    tools:context="com.toure.demahom.whattowatch.view.Login">

    <TextView
        android:text="@string/userNameTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/userNameETMarginBTM"/>

    <EditText
        android:id="@+id/etLoginUserNameID"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/userNameETMarginBTM" />

    <TextView
        android:text="@string/passwordTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/userNameETMarginBTM"/>

    <EditText
        android:id="@+id/etLoginPasswordID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginBottom="@dimen/loginETMarginBtm" />

    <Button
        android:id="@+id/loginPageLoginBntID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/log_inBtnText"
        android:layout_marginBottom="@dimen/loginBtnMarginBTM"/>

    <TextView
        android:id="@+id/cancelLoginID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/cancelTV"
        android:textStyle="bold"
        android:linksClickable="true" />


</LinearLayout>
